--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ Thumbs.db
 # Node Modules #
 ######################
 node_modules/
+
+# SASS #
+######################
+style.css.map
+
+# Environmental Variables #
+######################
+.env
